# monobox

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: license-audit.md  mcp.md  resource-feature-design.md
legal/: THIRD_PARTY_NOTICES.md
scripts/: compose-macos-icon.swift  generate-tauri-icons.sh  license-audit.mjs  release-prepare.mjs  release-push-tag.mjs  release-tag.mjs  release.mjs  render-rgba-png.swift  run-github-workflow.mjs  (+2 more)
src/: app.config.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: config.rs  database.rs  errors.rs  global_shortcuts.rs  lib.rs  main.rs  mcp.rs  migrations.rs
src-tauri/src/commands/: asset.rs  bookmark.rs  calendar_day.rs  config.rs  file.rs  focus_memo.rs  html_export.rs  kanban.rs  kanban_assignment.rs  kanban_status.rs  link.rs  memo.rs  memo_template.rs  milestone.rs  mod.rs  workspace.rs
src-tauri/src/models/: bookmark.rs  calendar_day.rs  file.rs  focus_memo.rs  kanban.rs  kanban_assignment.rs  kanban_status.rs  link.rs  memo.rs  memo_template.rs  milestone.rs  mod.rs  workspace.rs
src-tauri/src/repositories/: bookmark_repository.rs  calendar_day_repository.rs  file_repository.rs  focus_memo_repository.rs  kanban_assignment_repository.rs  kanban_repository.rs  kanban_status_repository.rs  link_repository.rs  memo_repository.rs  memo_template_repository.rs  memo_view_repository.rs  milestone_repository.rs  mod.rs  workspace_repository.rs
(+841 files in other folders)
