[package]
name = "monobox"
version = ""
description = "Local note-taking app like scrapbox"
authors = ["m2tkl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
base64 = "0.21.0"
mime_guess = "2.0"
uuid = { version = "1.3", features = ["v4"] }
directories = "5.0"
tauri-plugin-shell = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
